# crewai-sample

./: .ModelFile  README.md  pyproject.toml
src/device_info/: crew.py  main.py  run.py
src/device_info/config/: agents.yaml  tasks.yaml
src/device_info/tools/: custom_tool.py
